# braid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bench_mtu.sh  perf_test.sh
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
src/: error.rs  lib.rs
src/adaptive/: channels.rs  chunk_size.rs  mod.rs
src/buffer/: mod.rs  pool.rs  ring.rs
src/compress/: lz4.rs  mod.rs
src/control/: client.rs  mod.rs  negotiation.rs  server.rs  tests.rs
src/file_mode/: hash.rs  mod.rs  output.rs  receiver.rs  sanitize.rs  sender.rs  splitter.rs
src/flow/: mod.rs
src/progress/: reporter.rs
src/protocol/: control.rs  crc.rs  headers.rs  mod.rs
src/receiver/: commit.rs  mod.rs  ordering.rs  reassembly.rs
src/sender/: health.rs  mod.rs  parallel_splitter.rs  queue.rs  splitter.rs  worker.rs
src/shutdown/: manager.rs
tests/: e2e_test.rs  fault_injection_test.rs  file_mode_e2e.rs  integration_receive.rs  integration_send.rs  integration_test.rs
