[package]
name = "braid"
version = "0.6.0"
edition = "2021"
autobins = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
bytes = "1"
socket2 = "0.5"
nix = "0.29"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
lz4_flex = { version = "0.13.1", default-features = false, features = ["safe-decode", "safe-encode"] }
crossbeam = "0.8"

[dev-dependencies]
proptest = "1"
criterion = "0.5"
serial_test = "3"
tempfile = "3"

[features]
default = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "braid"
path = "src/bin/braid.rs"

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = []
